--- a/chatbot.html
+++ b/chatbot.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RC3KSF9X71"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-RC3KSF9X71');
+    </script>
     <meta charset="utf-8">
     <title>Chatbot</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
