--- a/chatbot.html
+++ b/chatbot.html
@@ -38,13 +38,13 @@
             <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item ms-2 d-md-inline d-md-none">
-                        <a class="nav-link" href="chatbot.html">Chatbot</a>
+                        <a class="nav-link" href="interlink.html">API Integration</a>
                     </li>
                     <li class="nav-item ms-2 d-md-inline d-md-none">
                         <a class="nav-link" href="assets/Resume.pdf">Resume</a>
                     </li>
                     <li class="nav-item ms-2 d-md-inline d-none">
-                        <a class="btn btn-secondary" href="chatbot.html">Chatbot</a>
+                        <a class="btn btn-secondary" href="interlink.html">API Integration</a>
                     </li>
                     <li class="nav-item ms-2 d-md-inline d-none">
                         <a class="btn btn-primary" href="assets/Resume.pdf">Resume</a>
