fix cards, make it so pdfs don't auto download, add college work. next step -> try react project for personal interests

--- a/chatbot.html
+++ b/chatbot.html
@@ -41,13 +41,13 @@
                         <a class="nav-link" href="interlink.html">API Integration</a>
                     </li>
                     <li class="nav-item ms-2 d-md-inline d-md-none">
-                        <a class="nav-link" href="assets/Resume.pdf">Resume</a>
+                        <a class="nav-link" href="assets/Resume.pdf" target="_blank">Resume</a>
                     </li>
                     <li class="nav-item ms-2 d-md-inline d-none">
                         <a class="btn btn-secondary" href="interlink.html">API Integration</a>
                     </li>
                     <li class="nav-item ms-2 d-md-inline d-none">
-                        <a class="btn btn-primary" href="assets/Resume.pdf">Resume</a>
+                        <a class="btn btn-primary" href="assets/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
