--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a class="nav-link" href="chatbot.html">Chatbot</a>
                 </li>
                 <li class="nav-item ms-2 d-md-inline d-md-none">
-                    <a class="nav-link" href="assets/Resume.pdf">Resume</a>
+                    <a class="nav-link" href="assets/Resume.pdf" target="_blank">Resume</a>
                 </li>
                 <li class="nav-item ms-2 d-md-inline d-none">
                     <a class="btn btn-secondary" href="interlink.html">API Integration</a>
@@ -60,7 +60,7 @@
                     <a class="btn btn-secondary" href="chatbot.html">Chatbot</a>
                 </li>
                 <li class="nav-item ms-2 d-md-inline d-none">
-                    <a class="btn btn-primary" href="assets/Resume.pdf">Resume</a>
+                    <a class="btn btn-primary" href="assets/Resume.pdf" target="_blank">Resume</a>
                 </li>
             </ul>
         </div>
@@ -76,7 +76,7 @@
                 <p class="lead">
                     Welcome! I'm Justin, a computer science student with a passion for software development, 
                     hardware, and problem-solving. With experience in web development, game development, 
-                    and hands-on engineering, I enjoy building efficient solutions—whether it's coding applications or 
+                    and hands-on software engineering, I enjoy building efficient solutions, whether it's coding applications or 
                     designing hardware.
                 </p>
                 <p class="lead">
@@ -114,36 +114,57 @@
             </div>
         </div>
         <div class="row justify-content-center p-4">
-            <div class="col-md-3 align-items-start">
+            <div class="col-md-10 align-items-start">
+                <h3>College Work</h3>
+                <p class="lead">
+                    I started attending college in August 2022, where I have been enjoying furthering my knowledge of computer science.
+                    My freshman year I took classes that furthered my knowledge of programming fundamentals, which involved Algorithms 
+                    and Computer Architecture. Going into Sophmore year, I took classes that greatly advanced my knowledge, which included 
+                    classes like Data Structures and Algorithms, and Concepts and Implementation of Programming Languages. During year I also 
+                    had my first introduction to AI and Machine learning, with my 
+                    <a href="assets/352-Machine-Learning-Final.pdf" target="_blank" alt="Download machine learning final pdf">final project</a> 
+                    consisting of a basic data classification model. I am currently in my Junior year, and so far this year I have taken important 
+                    fundamental classes like Operating Systems and Analysis of Algorithms. I am currently taking multiple classes that I find very 
+                    interesting, including Computer Networking, Cloud Application Development, and Web Application Programming and Hacking.
+                    My expected graduation date is May 2026, and until then I plan to continue to learn and broaden my knowledge of computer science, 
+                    with a focus on Web Development and Cyber Security.
+                </p>
+            </div>
+        <div class="row justify-content-center p-4">
+            <div class="col-md-3 align-items-center">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="assets/chatbot-icon.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Gemini Chatbot</h5>
                         <p class="card-text">Here is the link to the chatbot I created using Google Gemini.</p>
-                        <a href="chatbot.html" class="btn btn-primary">Chatbot</a>
+                        <a href="chatbot.html" class="btn btn-primary d-flex justify-content-center">Chatbot</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 align-items-start">
+            <div class="col-md-3 align-items-center">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="assets/university_of_dayton.jpg" alt="dayton.jpg">
                     <div class="card-body">
                         <h5 class="card-title">API Integration</h5>
-                        <p class="card-text">Here is a link to a page with some API integrations that I created for one of my courses.</p>
-                        <a href="interlink.html" class="btn btn-primary">Integration</a>
+                        <p class="card-text">Here is a link to a page with some API integrations that I created for one of my courses at UD.</p>
+                        <a href="interlink.html" class="btn btn-primary d-flex justify-content-center">Integration</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 align-items-start">
+            <div class="col-md-3 align-items-center">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="assets/resume.png" alt="resume.png">
                     <div class="card-body">
                         <h5 class="card-title">Resume</h5>
                         <p class="card-text">Here is a link to my resume, which has a more structured list of my skills and experiences.</p>
-                        <a href="assets/Resume.pdf" class="btn btn-primary">Resume</a>
+                        <a href="assets/Resume.pdf" target="_blank" class="btn btn-primary d-flex justify-content-center">Resume</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+</script>
+</html>
