--- a/interlink.html
+++ b/interlink.html
@@ -47,13 +47,13 @@
                     <a class="nav-link" href="chatbot.html">Chatbot</a>
                 </li>
                 <li class="nav-item ms-2 d-md-inline d-md-none">
-                    <a class="nav-link" href="assets/Resume-Justin-Jones.pdf">Resume</a>
+                    <a class="nav-link" href="assets/Resume-Justin-Jones.pdf" target="_blank">Resume</a>
                 </li>
                 <li class="nav-item ms-2 d-md-inline d-none">
                     <a class="btn btn-secondary" href="chatbot.html">Chatbot</a>
                 </li>
                 <li class="nav-item ms-2 d-md-inline d-none">
-                    <a class="btn btn-primary" href="assets/Resume-Justin-Jones.pdf">Resume</a>
+                    <a class="btn btn-primary" href="assets/Resume-Justin-Jones.pdf" target="_blank">Resume</a>
                 </li>
             </ul>
         </div>
