fix spelling errors :(

--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
             <div class="col-md-10 align-items-start">
                 <h3>About Me</h3>
                 <p class="lead">
-                    I was raised in the city of Edwardsville, Illnois (about 30 minutes from St. Louis).
-                    I attended Edwardsville High School where I graduated with honors in 2022. Since High School, 
-                    I have been attending the University of Dayton, where I exprect to graduate with honors in May of 2025.
-                    I am currently pursuing a Bachelor of Science in Computer Science with a concentration in Cybersecurity.
+                    I was raised in the city of Edwardsville, Illinois (about 30 minutes from St. Louis).
+                    I attended Edwardsville High School where I graduated with honors in 2022. Since high school, 
+                    I have been attending the University of Dayton, where I expect to graduate with honors in May of 2026.
+                    I am currently pursuing a Bachelor of Science in Computer Science with a concentration in cybersecurity.
                     From a young age, I have always been interested in technology and how things work. My first introduction to
                     programming was downloading games to my TI-84 in high school, and since then I have been hooked. I began to 
                     take programming classes in high school, and built my own PC in order to complete more advanced projects 
-                    than I was able to with my school issued Chromebook. Since beginning college, I have realized that within
-                    the field of computer science, I have a special interest of Cyber Security and Web Development.
+                    than I was able to do with my school issued Chromebook. Since beginning college, I have realized that within
+                    the field of computer science, I have a special interest of cybersecurity and web development.
                 </p>
             </div>
         </div>
@@ -117,17 +117,17 @@
             <div class="col-md-10 align-items-start">
                 <h3>College Work</h3>
                 <p class="lead">
-                    I started attending college in August 2022, where I have been enjoying furthering my knowledge of computer science.
-                    My freshman year I took classes that furthered my knowledge of programming fundamentals, which involved Algorithms 
-                    and Computer Architecture. Going into Sophmore year, I took classes that greatly advanced my knowledge, which included 
-                    classes like Data Structures and Algorithms, and Concepts and Implementation of Programming Languages. During year I also 
-                    had my first introduction to AI and Machine learning, with my 
+                    I started my college career in August 2022, where I have been enjoying expanding my knowledge of computer science.
+                    My freshman year I took classes that furthered my knowledge of programming fundamentals, which involved algorithms 
+                    and computer architecture. Going into my sophmore year, I took classes that greatly advanced my knowledge, which included 
+                    classes like Data Structures and Algorithms, and Concepts and Implementation of Programming Languages. That same year I also 
+                    had my first introduction to AI and machine learning, with my 
                     <a href="assets/352-Machine-Learning-Final.pdf" target="_blank" alt="Download machine learning final pdf">final project</a> 
-                    consisting of a basic data classification model. I am currently in my Junior year, and so far this year I have taken important 
+                    consisting of a basic data classification model. I am currently in my junior year, and thus far I have taken important 
                     fundamental classes like Operating Systems and Analysis of Algorithms. I am currently taking multiple classes that I find very 
                     interesting, including Computer Networking, Cloud Application Development, and Web Application Programming and Hacking.
-                    My expected graduation date is May 2026, and until then I plan to continue to learn and broaden my knowledge of computer science, 
-                    with a focus on Web Development and Cyber Security.
+                    My expected graduation date is May 2026. Until then I plan to continue to learn and broaden my knowledge of computer science, 
+                    with a focus on web development and cyber security.
                 </p>
             </div>
         <div class="row justify-content-center p-4">
