Make email more obivous that it needs to be clicked

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <div class="col-md-3 text-center d-none d-md-block">
                 <img class ="img-fluid img-thumbnail" src="assets/headshot.jpg" alt="Headshot of Justin Jones">
                 <div class="d-flex flex-column align-items-center">
-                    <div id="email-p" onclick="showhideEmailPersonal()"><p class="lead">Show my personal email</p></div>
-                    <div id="email-s" onclick="showhideEmailSchool()"><p class="lead">Show my school email</p></div>
+                    <div id="email-p" onclick="showhideEmailPersonal()"><p class="lead">Click to show my personal email</p></div>
+                    <div id="email-s" onclick="showhideEmailSchool()"><p class="lead">Click to show my school email</p></div>
                 </div>
             </div>
         </div>
