--- a/index.html
+++ b/index.html
@@ -1,170 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RC3KSF9X71"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-RC3KSF9X71');
-    </script>
-    
     <meta charset="utf-8">
-    <title>Homepage</title>
-    <!--Include repos-->
-    <style>
-        #section{
-            padding: 60px 0;
-        }
-    </style>
-    <script src="assets/email.js"></script>
+    <title>Justin Jones</title>
+
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-        crossorigin="anonymous">
-    </script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous">
+        crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/flatly/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+
+    <script src="assets/email.js"></script>
 </head>
 
-<!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">Home</a>
+<body>
 
-        <!-- NavBar Toggler for Mobile or smaller browser-->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-        data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" 
-        aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<!-- header -->
+<header class="profile-header">
+    <img src="assets/headshot.jpg" class="profile-pic" alt="Photo of Justin Jones">
 
-        <!-- NavBar Links -->
-        <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-            <ul class="navbar-nav">
-                <li class="nav-item ms-2 d-md-inline d-md-none">
-                    <a class="nav-link" href="interlink.html">API Integration</a>
-                </li>
-                <li class="nav-item ms-2 d-md-inline d-md-none">
-                    <a class="nav-link" href="chatbot.html">Chatbot</a>
-                </li>
-                <li class="nav-item ms-2 d-md-inline d-md-none">
-                    <a class="nav-link" href="assets/Resume.pdf" target="_blank">Resume</a>
-                </li>
-                <li class="nav-item ms-2 d-md-inline d-none">
-                    <a class="btn btn-secondary" href="interlink.html">API Integration</a>
-                </li>
-                <li class="nav-item ms-2 d-md-inline d-none">
-                    <a class="btn btn-secondary" href="chatbot.html">Chatbot</a>
-                </li>
-                <li class="nav-item ms-2 d-md-inline d-none">
-                    <a class="btn btn-primary" href="assets/Resume.pdf" target="_blank">Resume</a>
-                </li>
+    <h1 class="profile-name">Justin Jones</h1>
+    <h4 class="profile-role">Computer Science | Cybersecurity | Web Development</h4>
+
+    <!-- Clearance -->
+    <div class="clearance-badge" aria-hidden="true">Active U.S. Secret clearance</div>
+
+    <!-- social links -->
+    <div class="social-links">
+        <a href="https://github.com/jjones1512" target="_blank" class="social-icon">
+            <i class="bi bi-github"></i> GitHub
+        </a>
+        <a href="https://linkedin.com/in/justin-henry-jones" target="_blank" class="social-icon">
+            <i class="bi bi-linkedin"></i> LinkedIn
+        </a>
+        <a href="assets/Resume.pdf" target="_blank" class="social-icon">
+            <i class="bi bi-file-earmark-person"></i> Resume
+        </a>
+    </div>
+
+    <!-- contact me button -->
+    <button id="contact-btn" class="btn btn-primary mt-3">Contact Me</button>
+
+    <!-- contact panel -->
+    <div id="contact-panel" class="contact-panel mt-3">
+        <p id="email-p" class="email-link" onclick="showhideEmailPersonal()">Show my personal email</p>
+        <p id="email-s" class="email-link" onclick="showhideEmailSchool()">Show my school email</p>
+    </div>
+</header>
+
+<!-- about me -->
+<section class="about-section container">
+    <div class="card about-card">
+        <div class="card-body">
+            <h3>About Me</h3>
+            <p>
+                I was raised in Edwardsville, Illinois, about 30 minutes from St. Louis. I graduated with honors from 
+                Edwardsville High School in 2022 and began attending the University of Dayton shortly after. I am currently 
+                pursuing a Bachelor of Science in Computer Science with a concentration in cybersecurity, expecting to 
+                graduate in May 2026.
+            </p>
+            <p>
+                My interest in technology started early, my first taste of programming came from downloading games onto my 
+                TI-84 calculator. From there, I took programming classes in high school and eventually built my own PC so I 
+                could work on more advanced projects than my school-issued Chromebook allowed. Since starting college, I’ve 
+                discovered a strong interest in cybersecurity and web development.
+            </p>
+        </div>
+    </div>
+</section>
+
+<!-- College -->
+<section class="about-section container">
+    <div class="card about-card">
+        <div class="card-body">
+            <h3>College Work</h3>
+            <p>
+                I began my studies at the University of Dayton in August 2022, where I have enjoyed expanding my knowledge 
+                of computer science. My freshman year focused on programming fundamentals, algorithms, and computer 
+                architecture. 
+            </p>
+            <p>
+                During my sophomore year, I completed advanced courses such as Data Structures and Algorithms and Concepts 
+                and Implementation of Programming Languages. I also took my first AI and machine learning course, where my 
+                <a href="assets/352-Machine-Learning-Final.pdf" target="_blank" alt="Download machine learning final pdf">final project</a>
+                 involved building a basic data classification model.
+            </p>
+            <p>
+                Continuing in my junior year and have completed key foundational courses, including Operating Systems and 
+                Analysis of Algorithms, Computer Networking, Cloud Application Development, and Web 
+                Application Programming and Hacking; courses that have strengthened my interest in cybersecurity, 
+                full-stack development, and cloud systems.
+            </p>
+            <p>
+                I am currently in my senior year, taking courses such as Cybersecurity fundamentals, Secure Application Development,
+                and my senior capstone project. My expected graduation date is May 2026, and I plan to continue 
+                developing my skills in the areas of cybersecurity and web development.
+            </p>
+        </div>
+    </div>
+</section>
+
+<!-- Professional Experience -->
+<section class="about-section container">
+    <div class="card about-card">
+        <div class="card-body">
+            <h3>Professional Experience</h3>
+
+            <h5>Associate Cyber Scientist — Riverside Research</h5>
+            <p class="exp-date">August 2025 – Present</p>
+            <ul>
+                <li>Develop secure parsers using Hammer, EverParse, and parseLab for contract deliverables.</li>
+                <li>Prepare materials and demonstrations used in project bidding and customer engagement.</li>
+            </ul>
+
+            <h5>Secure & Resilient Systems Intern — Riverside Research</h5>
+            <p class="exp-date">June 2025 – August 2025</p>
+            <ul>
+                <li>Built a product demo using OpenCV and large language models.</li>
+                <li>Enhanced UCPact, a web tool supporting the creation of Universal Composability models.</li>
+            </ul>
+
+            <h5>IT Support — Quackcom IT & Telecom</h5>
+            <p class="exp-date">May 2024 – August 2024</p>
+            <ul>
+                <li>Resolved level 1 and level 2 customer issues using VSAX and ConnectWise.</li>
+                <li>Assisted in transitioning the company to a new ticketing system.</li>
+            </ul>
+
+            <h5>Butcher — Kelly’s Butcher Shop and Deli</h5>
+            <p class="exp-date">June 2020 – June 2025</p>
+            <ul>
+                <li>Handled customer requests and recommendations for 20+ customers daily.</li>
+                <li>Practiced conflict resolution and customer service under fast-paced conditions.</li>
             </ul>
         </div>
     </div>
-</nav>
-
-<!-- Intro and headshot -->
-<section id = "intro">
-    <div class="container p-5 border-start border-end border-top border-secondary border-1">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-md-6">
-                <h1>Home Page of Justin Jones</h1>
-                <p class="lead">
-                    Welcome! I'm Justin, a computer science student with a passion for software development, 
-                    hardware, and problem-solving. With experience in web development, game development, 
-                    and hands-on software engineering, I enjoy building efficient solutions, whether it's coding applications or 
-                    designing hardware.
-                </p>
-                <p class="lead">
-                    I’ll dive deeper into my skills and experiences 
-                    throughout this site. Feel free to explore and reach out!
-                </p>
-            </div>
-            <div class="col-md-3 text-center d-none d-md-block">
-                <img class ="img-fluid img-thumbnail" src="assets/headshot.jpg" alt="Headshot of Justin Jones">
-                <div class="d-flex flex-column align-items-center">
-                    <div id="email-p" onclick="showhideEmailPersonal()"><p class="lead">Click to show my personal email</p></div>
-                    <div id="email-s" onclick="showhideEmailSchool()"><p class="lead">Click to show my school email</p></div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
-<section id = "main">
-    <div class="container p-5 border-start border-end border-bottom border-secondary border-1 shadow-lg">
-        <div class="row justify-content-center p-4">
-            <div class="col-md-10 align-items-start">
-                <h3>About Me</h3>
-                <p class="lead">
-                    I was raised in the city of Edwardsville, Illinois (about 30 minutes from St. Louis).
-                    I attended Edwardsville High School where I graduated with honors in 2022. Since high school, 
-                    I have been attending the University of Dayton, where I expect to graduate with honors in May of 2026.
-                    I am currently pursuing a Bachelor of Science in Computer Science with a concentration in cybersecurity.
-                    From a young age, I have always been interested in technology and how things work. My first introduction to
-                    programming was downloading games to my TI-84 in high school, and since then I have been hooked. I began to 
-                    take programming classes in high school, and built my own PC in order to complete more advanced projects 
-                    than I was able to do with my school issued Chromebook. Since beginning college, I have realized that within
-                    the field of computer science, I have a special interest of cybersecurity and web development.
-                </p>
-            </div>
-        </div>
-        <div class="row justify-content-center p-4">
-            <div class="col-md-10 align-items-start">
-                <h3>College Work</h3>
-                <p class="lead">
-                    I started my college career in August 2022, where I have been enjoying expanding my knowledge of computer science.
-                    My freshman year I took classes that furthered my knowledge of programming fundamentals, which involved algorithms 
-                    and computer architecture. Going into my sophmore year, I took classes that greatly advanced my knowledge, which included 
-                    classes like Data Structures and Algorithms, and Concepts and Implementation of Programming Languages. That same year I also 
-                    had my first introduction to AI and machine learning, with my 
-                    <a href="assets/352-Machine-Learning-Final.pdf" target="_blank" alt="Download machine learning final pdf">final project</a> 
-                    consisting of a basic data classification model. I am currently in my junior year, and thus far I have taken important 
-                    fundamental classes like Operating Systems and Analysis of Algorithms. I am currently taking multiple classes that I find very 
-                    interesting, including Computer Networking, Cloud Application Development, and Web Application Programming and Hacking.
-                    My expected graduation date is May 2026. Until then I plan to continue to learn and broaden my knowledge of computer science, 
-                    with a focus on web development and cyber security.
-                </p>
-            </div>
-        <div class="row justify-content-center p-4">
-            <div class="col-md-3 align-items-center">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/chatbot-icon.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Gemini Chatbot</h5>
-                        <p class="card-text">Here is the link to the chatbot I created using Google Gemini.</p>
-                        <a href="chatbot.html" class="btn btn-primary d-flex justify-content-center">Chatbot</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 align-items-center">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/university_of_dayton.jpg" alt="dayton.jpg">
-                    <div class="card-body">
-                        <h5 class="card-title">API Integration</h5>
-                        <p class="card-text">Here is a link to a page with some API integrations that I created for one of my courses at UD.</p>
-                        <a href="interlink.html" class="btn btn-primary d-flex justify-content-center">Integration</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 align-items-center">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/resume.png" alt="resume.png">
-                    <div class="card-body">
-                        <h5 class="card-title">Resume</h5>
-                        <p class="card-text">Here is a link to my resume, which has a more structured list of my skills and experiences.</p>
-                        <a href="assets/Resume.pdf" target="_blank" class="btn btn-primary d-flex justify-content-center">Resume</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+
+<script>
+
+    // Toggle Contact Panel
+    document.getElementById('contact-btn').onclick = () => {
+        document.getElementById('contact-panel').classList.toggle('open');
+    };
 </script>
+
+<!-- Bootstrap Icons CDN -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
