--- a/index.html
+++ b/index.html
@@ -107,29 +107,29 @@
         <div class="card-body">
             <h3>Professional Experience</h3>
 
-            <h5>Associate Cyber Scientist — Riverside Research</h5>
-            <p class="exp-date">August 2025 – Present</p>
+            <h5>Associate Cyber Scientist - Riverside Research</h5>
+            <p class="exp-date">August 2025 - Present</p>
             <ul>
                 <li>Develop secure parsers using Hammer, EverParse, and parseLab for contract deliverables.</li>
                 <li>Prepare materials and demonstrations used in project bidding and customer engagement.</li>
             </ul>
 
-            <h5>Secure & Resilient Systems Intern — Riverside Research</h5>
-            <p class="exp-date">June 2025 – August 2025</p>
+            <h5>Secure & Resilient Systems Intern - Riverside Research</h5>
+            <p class="exp-date">June 2025 - August 2025</p>
             <ul>
                 <li>Built a product demo using OpenCV and large language models.</li>
                 <li>Enhanced UCPact, a web tool supporting the creation of Universal Composability models.</li>
             </ul>
 
-            <h5>IT Support — Quackcom IT & Telecom</h5>
-            <p class="exp-date">May 2024 – August 2024</p>
+            <h5>IT Support - Quackcom IT & Telecom</h5>
+            <p class="exp-date">May 2024 - August 2024</p>
             <ul>
                 <li>Resolved level 1 and level 2 customer issues using VSAX and ConnectWise.</li>
                 <li>Assisted in transitioning the company to a new ticketing system.</li>
             </ul>
 
-            <h5>Butcher — Kelly’s Butcher Shop and Deli</h5>
-            <p class="exp-date">June 2020 – June 2025</p>
+            <h5>Butcher - Kelly’s Butcher Shop and Deli</h5>
+            <p class="exp-date">June 2020 - June 2025</p>
             <ul>
                 <li>Handled customer requests and recommendations for 20+ customers daily.</li>
                 <li>Practiced conflict resolution and customer service under fast-paced conditions.</li>
